--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="intent">Intent</string>
     <string name="task_and_back_stack">Task and Back Stack</string>
 
+    <string name="button_next">Next</string>
+    <string name="button_finish">Finish</string>
     <string name="button_send_custom_broadcast">Send Custom Broadcast</string>
     <string name="button_open_link_in_browser">Open Link in Browser</string>
     <string name="button_call_phone">Call Phone</string>
@@ -18,4 +20,12 @@
     <string name="button_activity_three_single_task">Activity Three (Single Task)</string>
     <string name="button_activity_four_single_instance">Activity Four (Single Instance)</string>
     <string name="button_activity_five_flag_new_task">Activity Five (Flag New Task)</string>
+    <string name="button_activity_six_affinities">Activity Six (Affinities)</string>
+
+    <string name="hint_value_one">Value One</string>
+    <string name="hint_value_two">Value Two</string>
+
+    <string name="label_result">Result</string>
+
+    <string name="affinity_calculation">affinity.calculation</string>
 </resources>
