UI Part 7 (Animation)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="button_basic_view">Basic Views</string>
     <string name="button_layouts">Layouts</string>
     <string name="button_constraint_layout">Constraint Layout</string>
+    <string name="button_animate">Animate</string>
 
     <string name="hint_value_one">Value One</string>
     <string name="hint_value_two">Value Two</string>
