--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,10 @@
     <string name="button_drawer">Drawer</string>
     <string name="button_tab">Tabs</string>
     <string name="button_language_change">Language Change</string>
+    <string name="button_theme_change">Theme Change</string>
+    <string name="button_about_us">About Us</string>
+    <string name="button_listview">Listview</string>
+    <string name="button_recyclerview">Recyclerview</string>">
 
     <string name="menu_all_mail">All mail</string>
     <string name="menu_title_main">Main</string>
@@ -59,6 +63,4 @@
     <string name="affinity_calculation">affinity.calculation</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="button_theme_change">Theme Change</string>
-    <string name="button_about_us">About Us</string>
 </resources>
