Room Experiment Part 1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="task_and_back_stack">Task and Back Stack</string>
     <string name="user_interface">User Interface</string>
     <string name="resources">Resources</string>
+    <string name="database">Database</string>
     <string name="share_preference">Share Preference</string>
 
     <string name="button_next">Next</string>
